flag necessay environment changes

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
-node_modules
-.txt
+node_modules/
+*.env
+# It's a good practice to include package-lock.json
+# If you want to ignore it, use the following line, but it's not recommended:
+# package-lock.json
