--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "scripts": {
     "start": "node api/server.js", 
     "dev": "nodemon api/server.js", 
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "vercel-build": "vercel build"
   },
   "author": "Sujay",
   "license": "ISC",
@@ -22,6 +23,6 @@
     "pg": "^8.13.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.7"  
+    "nodemon": "^3.1.7"
   }
 }
