--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "start": "node api/server.js", 
     "dev": "nodemon api/server.js", 
     "test": "echo \"Error: no test specified\" && exit 1",
-    "vercel-build": "vercel build"
+    "vercel-build": "echo 'No build step required'"
   },
   "author": "Sujay",
   "license": "ISC",
