--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "api/server.js",
   "type": "module",
   "engines": {
-    "node": ">=18.x",
-    "npm": ">=9.x"
-  },
+  "node": "18.x",
+  "npm": "9.x"
+},
   "scripts": {
     "start": "node api/server.js", 
     "dev": "nodemon api/server.js", 
