Add the changes

--- a/vercel.json
+++ b/vercel.json
@@ -12,6 +12,10 @@
       "dest": "/api/server.js"
     },
     {
+      "src": "/feedback/:id",
+      "dest": "/api/feedback/:id"
+    },
+    {
       "src": "/(.*)",
       "dest": "/public/$1"
     }
