--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "To-do List",
   "main": "api/server.js",
   "type": "module",
-  "engines": {
-  "node": "18.x",
-  "npm": "9.x"
-},
+"engines": {
+  "node": "18.20.4",
+  "npm": "10.7.0"
+}
+,
   "scripts": {
     "start": "node api/server.js", 
     "dev": "nodemon api/server.js", 
